--- a/src/index.css
+++ b/src/index.css
@@ -79,12 +79,12 @@ button:focus-visible {
     --popover-foreground: 0 0% 3.9%;
     --primary: #BF3838;
     --primary-foreground: #981C2C;
-    --secondary: 0 0% 96.1%;
+    --secondary: #FEFEFE14;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
     --accent: #fff;
-    --accent-foreground: 0 0% 9%;
+    --accent-foreground: #000;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
     --border: 0 0% 89.8%;
